--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <title>정현♥지영 231202</title>
     <meta name="description" content="2015년 12월 1일에 만나 2023년 12월 2일에 결혼합니다." />
 
-    <!-- <meta property="og:url" content="https://yhancsx.github.io/YohanJiyun_Weddingday_20220806" /> -->
+    <meta property="og:url" content="https://dpnia.github.io/wedding/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content="정현♥지영 231202" />
     <meta property="og:description" content="2015년 12월 1일에 만나 2023년 12월 2일에 결혼합니다." />
-    <!-- <meta property="og:image" content="https://yhancsx.github.io/YohanJiyun_Weddingday_20220806/images/ogimage.jpg" /> -->
+    <meta property="og:image" content="https://dpnia.github.io/wedding/images/001.jpg" />
 
     <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
