--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>정현♥지영 231202</title>
-    <meta name="description" content="2015년 12월 1일에 만나 2023년 12월 2일에 결혼합니다." />
+    <title>김정현♥임지영 결혼합니다 (2023.12.02)</title>
+    <meta name="description" content="Since 2015.12.01" />
 
     <meta property="og:url" content="https://dpnia.github.io/wedding/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="정현♥지영 231202" />
-    <meta property="og:description" content="2015년 12월 1일에 만나 2023년 12월 2일에 결혼합니다." />
+    <meta property="og:title" content="김정현♥임지영 결혼합니다 (2023.12.02)" />
+    <meta property="og:description" content="Since 2015.12.01" />
     <meta property="og:image" content="https://dpnia.github.io/wedding/images/001.jpg" />
 
     <link rel="stylesheet" type="text/css" href="./index.css" />
