--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="김정현♥임지영 결혼합니다 (2023.12.02)" />
     <meta property="og:description" content="Since 2015.12.01" />
-    <meta property="og:image" content="https://dpnia.github.io/wedding/images/001.jpg" />
+    <meta property="og:image" content="https://dpnia.github.io/wedding/images/001.png" />
 
     <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
