--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
     <img loading="lazy" src="./images/020.png" />
     <img loading="lazy" src="./images/021.png" />
     <img loading="lazy" src="./images/022.png" />
+    <img loading="lazy" src="./images/023.png" />
+
     <div class="button-group">
       <button class="up">↑</button>
       <button class="down">↓</button>
