--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="김정현♥임지영 결혼합니다 (2023.12.02)" />
     <meta property="og:description" content="Since 2015.12.01" />
-    <meta property="og:image" content="https://dpnia.github.io/wedding/images/001.png" />
+    <meta property="og:image" content="https://dpnia.github.io/wedding/images/og.jpg" />
 
     <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
@@ -21,21 +21,22 @@
     <img loading="lazy" src="./images/002.png"  />
 
     <img loading="lazy" src="./images/003.png" />
+    <img loading="lazy" src="./images/003-1.png" />
     <img loading="lazy" src="./images/004.png" />
-    <img loading="lazy" src="./images/005.png" />
+    <!-- <img loading="lazy" src="./images/005.png" /> -->
     <img loading="lazy" src="./images/006.png" />
     <img loading="lazy" src="./images/007.png" />
     <img loading="lazy" src="./images/008.png" />
-    <img loading="lazy" src="./images/009.png" />
+    <!-- <img loading="lazy" src="./images/009.png" /> -->
     <img loading="lazy" src="./images/010.png" />
     <img loading="lazy" src="./images/011.png" />
     <img loading="lazy" src="./images/012.png" />
-    <img loading="lazy" src="./images/013.png" />
-    <img loading="lazy" src="./images/014.png" />
+    <!-- <img loading="lazy" src="./images/013.png" /> -->
+    <!-- <img loading="lazy" src="./images/014.png" /> -->
     <img loading="lazy" src="./images/015.png" />
     <img loading="lazy" src="./images/016.png" />
     <img loading="lazy" src="./images/017.png" />
-    <img loading="lazy" src="./images/018.png" />
+    <!-- <img loading="lazy" src="./images/018.png" /> -->
     <img loading="lazy" src="./images/019.png" />
     <img loading="lazy" src="./images/020.png" />
     <img loading="lazy" src="./images/021.png" />
