--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     <link rel="stylesheet" type="text/css" href="./index.css" />
   </head>
   <body>
-    <img loading="lazy" src="./images/001.png" class="first" />
+    <img loading="lazy" src="./images/new-001.png" class="first" />
     <img loading="lazy" src="./images/002.png"  />
 
     <img loading="lazy" src="./images/003.png" />
     <img loading="lazy" src="./images/003-1.png" />
     <img loading="lazy" src="./images/004.png" />
     <!-- <img loading="lazy" src="./images/005.png" /> -->
-    <img loading="lazy" src="./images/006.png" />
+    <img loading="lazy" src="./images/new-006.png" />
     <img loading="lazy" src="./images/007.png" />
     <img loading="lazy" src="./images/008.png" />
     <!-- <img loading="lazy" src="./images/009.png" /> -->
