--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <img loading="lazy" src="./images/002.png"  />
 
     <img loading="lazy" src="./images/003.png" />
-    <img loading="lazy" src="./images/003-1.png" />
+    <img loading="lazy" src="./images/new-006.png" />
     <img loading="lazy" src="./images/004.png" />
     <!-- <img loading="lazy" src="./images/005.png" /> -->
-    <img loading="lazy" src="./images/new-006.png" />
+    <img loading="lazy" src="./images/006.png" />
     <img loading="lazy" src="./images/007.png" />
     <img loading="lazy" src="./images/008.png" />
     <!-- <img loading="lazy" src="./images/009.png" /> -->
