--- a/english/index.html
+++ b/english/index.html
@@ -10,7 +10,7 @@
 
     <meta property="og:url" content="https://dpnia.github.io/wedding/" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="김정현♥임지영 결혼합니다 (2023.12.02)" />
+    <meta property="og:title" content="Junghyun Kim♥Jiyeong Yim(Judy) Wedding (2023.12.02)" />
     <meta property="og:description" content="Since 2015.12.01" />
     <meta property="og:image" content="https://dpnia.github.io/wedding/images/og.jpg" />
 
