--- a/english/index.html
+++ b/english/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>김정현♥임지영 결혼합니다 (2023.12.02)</title>
+    <title>Junghyun Kim♥Jiyeong Yim(Judy) Wedding (2023.12.02)</title>
     <meta name="description" content="Since 2015.12.01" />
 
     <meta property="og:url" content="https://dpnia.github.io/wedding/" />
